Update matias.html with personal information and image

--- a/matias.html
+++ b/matias.html
@@ -5,7 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+Matias Piña 
 <body>
-    
+    <p>Edad: 20, Carrera: Ingenieria en informatica, Intereses: Los videojuegos, la tecnologia</p>
+    <p2>Mi nombre es Matias Piña, tengo 20 años, soy una persona amigable a la cual le interesa mucho la tecnologia desde pequeño
+        y siempre he tenido un interes en los videojuegos, por lo que decidi estudiar ingenieria en informatica para poder
+        aprender mas sobre el desarrollo de videojuegos y poder trabajar en la industria de los videojuegos en un futuro.
+    </p2>
+    <img src="C:/Users/TheRe/Desktop/Workspace/Projectos/flutter_application_1/team/images/member1.png" alt="Member Image">
 </body>
 </html>
